src/test/ui/issues/30000-39999/issue-33504.rs
// Shadowing a unit-like enum in a closure

struct Test;

fn main() {
    || {
        let Test = 1; //~ ERROR mismatched types
    };
}
